--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^3.1.3",
     "express": "^4.16.3",
+    "mongodb": "^3.5.8",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11"
   }
